# square-rs

./: .gitignore  Cargo.toml  README.md  README.org
examples/: payments_api.rs  payments_api_sca.rs
examples/static/: index.html  index_sca.html  payment_form.js  payment_form_sca.js
src/: client.rs  endpoint.rs  error.rs  lib.rs  money.rs  payment.rs  response.rs
