[package]
name = "square-rs"
version = "0.1.0"
authors = ["Kyle Cotton <kylecottonkc@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/KyleCotton/square-rs"
categories = ["api-bindings","asynchronous", "web-programming::http-client"]
keywords = ["square", "finance", "payment", "card-processing"]
description = "A convenient wrapper for the Square API, providing online payment processing, and other financial services."
exclude = ["examples/**/*"]



[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.0", features = ["blocking", "json"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
square-rs = {path = "../square-rs"}
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.5.0"
actix-files = "0.5.0"
log = "0.4.14"
env_logger = "0.8.3"
